# LabBenchPowerSupply

./: .gitignore  .gitmodules  .~lock.RequiredComponents.ods#  BuckConverter.asc  CODE_OF_CONDUCT.md  README.md  RequiredComponents.ods
Firmware/: CMakeLists.txt  avr-gdb-commands.gdb  run_all_tests.sh
Firmware/ATStudio_tests/: ATStudio_tests.atsln
Firmware/ATStudio_tests/ATStudio_tests/: ATStudio_tests.cproj  driver_setup.c  main.c  timer_16_bit.c  timer_8_bit_async.c
Firmware/ATStudio_tests/ATStudio_tests/Debug/: ATStudio_tests.elf  ATStudio_tests.hex  ATStudio_tests.lss  ATStudio_tests.map  ATStudio_tests.srec  Makefile  driver_setup.d  main.d  makedep.mk  timer_16_bit.d  timer_8_bit.d  timer_8_bit_async.d
Firmware/AlternativeBuildSystem/: build_debug.sh  firmware
Firmware/App/: CMakeLists.txt
Firmware/App/inc/: config.h  driver_setup.h  module_setup.h  pin_mapping.h
Firmware/App/src/: driver_setup.c  main.c  module_setup.c
Firmware/AvrAsyncSdk/Drivers/: CMakeLists.txt
Firmware/AvrAsyncSdk/Drivers/Adc/: CMakeLists.txt
Firmware/AvrAsyncSdk/Drivers/Adc/Tests/: adc_driver_tests.cpp
Firmware/AvrAsyncSdk/Drivers/Adc/inc/: adc.h  adc_reg.h
Firmware/AvrAsyncSdk/Drivers/Adc/private_inc/: adc_stack.h
Firmware/AvrAsyncSdk/Drivers/Adc/src/: adc.c  adc_stack.c
Firmware/AvrAsyncSdk/Drivers/I2c/: CMakeLists.txt  Readme.md
Firmware/AvrAsyncSdk/Drivers/I2c/Tests/: CMakeLists.txt
Firmware/AvrAsyncSdk/Drivers/Lcd_screen/: CMakeLists.txt
Firmware/AvrAsyncSdk/Drivers/Timers/Timer_8_bit/: CMakeLists.txt
Firmware/AvrAsyncSdk/Modules/Timebase/: CMakeLists.txt
Firmware/AvrAsyncSdk/Modules/Timebase/Tests/: timebase_tests.cpp
Firmware/AvrAsyncSdk/Modules/Timebase/inc/: timebase.h
Firmware/AvrAsyncSdk/Sensors/: CMakeLists.txt
Firmware/AvrAsyncSdk/Sensors/Thermistor/private_inc/: thermistor_private.h
Firmware/AvrAsyncSdk/Tests/: CMakeLists.txt
Firmware/AvrAsyncSdk/Utils/: CMakeLists.txt
Firmware/AvrAsyncSdk/Utils/inc/: memutils.h
Firmware/Drivers/: CMakeLists.txt
Firmware/Drivers/Adc/: CMakeLists.txt
Firmware/Drivers/Adc/Tests/: CMakeLists.txt  adc_driver_tests.cpp  adc_stack_tests.cpp
Firmware/Drivers/Adc/Tests/Stub/: adc_register_stub.c  adc_register_stub.h
Firmware/Drivers/Adc/inc/: adc.h  adc_reg.h
Firmware/Drivers/Adc/private_inc/: adc_stack.h
Firmware/Drivers/Adc/src/: adc.c  adc_stack.c
Firmware/Drivers/I2C/inc/: i2c.h  i2c_reg.h
Firmware/Drivers/I2c/: CMakeLists.txt  Readme.md
Firmware/Drivers/I2c/Examples/master_firmware/: CMakeLists.txt
Firmware/Drivers/I2c/Examples/slave_firmware/: CMakeLists.txt
Firmware/Drivers/I2c/Tests/: CMakeLists.txt  config.h  i2c_driver_tests.cpp
Firmware/Drivers/I2c/Tests/Stub/: I2cBusSimulator.cpp  I2cBusSimulator.hpp  i2c_device_interface.h  i2c_fake_device.c  i2c_fake_device.h  i2c_fake_slave_application_data.c  i2c_fake_slave_application_data.h  i2c_register_stub.c  i2c_register_stub.h  i2c_simulator_device_interface.h  test_isr_stub.h  twi_hardware_stub.c  twi_hardware_stub.h
Firmware/Drivers/I2c/inc/: i2c.h  i2c_private.h  i2c_reg.h
Firmware/Drivers/I2c/src/: i2c.c
Firmware/Drivers/Io/: CMakeLists.txt
Firmware/Drivers/Io/Tests/: CMakeLists.txt  io_tests.cpp
Firmware/Drivers/Io/Tests/Stub/: config.c  config.h
Firmware/Drivers/Io/inc/: io.h
Firmware/Drivers/Io/src/: io.c
Firmware/Drivers/Lcd_screen/: CMakeLists.txt
Firmware/Drivers/Lcd_screen/Examples/: CMakeLists.txt
Firmware/Drivers/Lcd_screen/Examples/App/: CMakeLists.txt
Firmware/Drivers/Lcd_screen/Tests/: CMakeLists.txt  HD44780_lcd_tests.cpp
Firmware/Drivers/Lcd_screen/Tests/Stub/: i2c.h  i2c_stub.c  timebase.h  timebase_stub.c
Firmware/Drivers/Lcd_screen/inc/: HD44780_lcd.c  HD44780_lcd.h  HD44780_lcd_private.h
Firmware/Drivers/Lcd_screen/src/: HD44780_lcd.c
Firmware/Drivers/Peripheral/inc/: generic_peripheral.h
Firmware/Drivers/Timers/: CMakeLists.txt
Firmware/Drivers/Timers/Tests/: CMakeLists.txt  config.h  timer_8_bit_async_tests.cpp  timer_8_bit_tests.cpp
Firmware/Drivers/Timers/Tests/Stub/: timer_16_bit_registers_stub.h  timer_8_bit_async_registers_stub.c  timer_8_bit_async_registers_stub.h  timer_8_bit_registers_stub.h
Firmware/Drivers/Timers/Timer_16_bit/: CMakeLists.txt
Firmware/Drivers/Timers/Timer_16_bit/Tests/: CMakeLists.txt  config.h  timer_16_bit_tests.cpp
Firmware/Drivers/Timers/Timer_16_bit/inc/: timer_16_bit.h  timer_16_bit_reg.h
Firmware/Drivers/Timers/Timer_16_bit/src/: timer_16_bit.c
Firmware/Drivers/Timers/Timer_8_bit/: CMakeLists.txt
Firmware/Drivers/Timers/Timer_8_bit_async/: CMakeLists.txt
Firmware/Drivers/Timers/Timer_generic/: CMakeLists.txt
Firmware/Drivers/Timers/inc/: timer.h  timer_reg.h  timers.h
Firmware/E2ETests/I2C_firmwares/: Readme.md
Firmware/E2ETests/I2C_firmwares/master_firmware/: CMakeLists.txt
Firmware/E2ETests/I2C_firmwares/slave_firmware/: CMakeLists.txt
Firmware/LabBenchPowerSupply/: CMakeLists.txt
Firmware/LabBenchPowerSupply/Drivers/Adc/: CMakeLists.txt
Firmware/LabBenchPowerSupply/Firmware/App/: CMakeLists.txt
Firmware/LabBenchPowerSupply/Firmware/Drivers/: CMakeLists.txt
Firmware/LabBenchPowerSupply/Tests/: CMakeLists.txt
Firmware/Modules/: CMakeLists.txt
Firmware/Modules/Pwm/Tests/Stubs/: config.h
Firmware/Modules/Pwm/inc/: pwm.h
Firmware/Modules/Pwm/src/: pwm.c
Firmware/Modules/TimeBase/inc/: timebase.h
Firmware/Modules/Timebase/: CMakeLists.txt
Firmware/Modules/Timebase/Tests/: CMakeLists.txt  timebase_tests.cpp
Firmware/Modules/Timebase/inc/: timebase.h  timebase_internal.h
Firmware/Modules/Timebase/src/: timebase.c
Firmware/Sensors/Thermistor/: CMakeLists.txt
Firmware/Sensors/Thermistor/Tests/: CMakeLists.txt  thermistor_driver_tests.cpp
Firmware/Sensors/Thermistor/inc/: thermistor.h
Firmware/Sensors/Thermistor/private_inc/: thermistor_private.h
Firmware/Sensors/Thermistor/src/: thermistor.c  thermistor_private.c
Firmware/Tests/: CMakeLists.txt  gdb_commands.gdb  run_all_tests.sh
Firmware/Toolchain/: avr-gcc-toolchain.cmake  avr8-gcc-toolchain.cmake
Firmware/Utils/src/: memutils.c
(+122 files in other folders)
